# mPSAT-filter

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config_ae.json  config_cnn1d.json  config_vcnn.json
data/: mpid_type.json
mpfilter/: arg_parsers.py  config.py  dataset.py  ds_generate.py  eval_onnx.py  eval_sk.py  inferer.py  inferer_nn.py  model.py  model_pl.py  nn2onnx.py  sk2onnx.py  train.py  train_sk.py  transform_ds.py
notebooks/: benchmark_mean_sd.csv  model_statistics.ipynb
notebooks/models/: DT_0_DS02.onnx  DT_0_DSALL.onnx  LSVM_0_DS02.onnx  LSVM_0_DSALL.onnx
