[tool.poetry]
name = "mp_filter"
version = "0.1.0"
description = ""
authors = ["rainyl <rainyliusy3@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = ">=1.23.1"
pandas = ">=1.4.3"
scipy = ">=1.9.0"
matplotlib = ">=3.5.3"
mariadb = ">=1.1.4"
pyarrow = ">=9.0.0"
tqdm = ">=4.64.1"
einops = "^0.6.1"
scikit-learn = "^1.1.1"
onnx = "^1.13.0"
onnxruntime-gpu = "^1.13.1"

typed-argument-parser = "^1.8.1"
torch = {version = "2.0.1+cu117", source = "torch_cu117"}
torchvision = {version = "0.15.2+cu117", source = "torch_cu117"}
tokenizers = "^0.14.0"
torchmetrics = "^1.1.2"
pytorch-lightning = "^2.0.8"
skl2onnx = "^1.15.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"
black = ">=22.6.0"
torch-tb-profiler = "^0.4.1"
tensorboard = ">=2.10.0"
ipympl = "^0.9.2"
ipykernel = ">=6.15.1"
ipywidgets = ">=8.0.2"
pipdeptree = ">=2.3.0"
pytest = ">=7.1.3"
seaborn = "^0.12.2"

[tool.poetry.group.poe.dependencies]
poethepoet = "^0.18.1"

[tool.poe.tasks]
ins-cu117 = """
    python -m pip install 
    torch==1.13.1+cu117 
    torchvision==0.14.1+cu117 
    torchmetrics 
    pytorch-lightning 
    ptflops 
    -f https://download.pytorch.org/whl/torch_stable.html
"""
ins-cu116 = """
    python -m pip install 
    torch==1.12.1+cu116 
    torchvision==0.13.1+cu116 
    torchmetrics 
    pytorch-lightning 
    ptflops 
    -f https://download.pytorch.org/whl/torch_stable.html
"""

[tool.ruff]
ignore = ["E501"]

[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
